--- a/ChemicalJ-01/index.html
+++ b/ChemicalJ-01/index.html
@@ -13,7 +13,7 @@
   <canvas id="canvas"></canvas>
 
   <script src="graphics.js"></script>
-  <script src="clock.js"></script>
+  <script src="game.js"></script>
 
 </body>
 
