--- a/ChemicalJ-04/index.html
+++ b/ChemicalJ-04/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>HTML</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <canvas id="canvas"></canvas>
-
-  <script src="graphics.js"></script>
-  <script src="touch.js"></script>
-  <script src="game.js"></script>
-
-</body>
-
+<html>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<title></title>
+		<style>
+			html, body {
+				margin: 0;
+				padding: 0;
+				width: 100%;
+				height: 100%;
+				overflow: hidden;
+			}
+		</style>
+	</head>
+	<body>
+		<canvas id="canvas"></canvas>
+		<script src="graphics.js"></script>
+		<script src="touch.js"></script>
+	</body>
 </html>
