--- a/ChemicalJ-04/index.html
+++ b/ChemicalJ-04/index.html
@@ -17,5 +17,9 @@
 		<canvas id="canvas"></canvas>
 		<script src="graphics.js"></script>
 		<script src="touch.js"></script>
+		<script src="Util.js"></script>
+		<script src="Button.js"></script>
+		<script src="Pad.js"></script>
+		<script src="game.js"></script>
 	</body>
 </html>
