--- a/ChemicalJ-04/index.html
+++ b/ChemicalJ-04/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-		<title></title>
+		<title>ChemicalJ</title>
 		<style>
 			html, body {
 				margin: 0;
@@ -21,6 +21,8 @@
 		<script src="util.js"></script>
 		<script src="button.js"></script>
 		<script src="pad.js"></script>
+		<script src="common.js"></script>
+		<script src="player.js"></script>
 		<script src="game.js"></script>
 
 	</body>
